fix dropdown overflow

--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -1,10 +1,6 @@
 .dropdown {
   &__content {
     @apply inline-block relative;
-    &::after {
-      content: "";
-      @apply absolute top-full left-0 w-full h-2 bg-transparent z-10;
-    }
   }
 
   &__overlay {
