--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -6,7 +6,7 @@
     }
 
     &-field {
-      @apply mb-2;
+      @apply my-2;
     }
 
     &-error {
