--- a/styles/layouts/_commonLayout.scss
+++ b/styles/layouts/_commonLayout.scss
@@ -1,4 +1,5 @@
 .common-layout {
+  @apply overflow-hidden;
   .main {
     min-height: calc(100vh - 142px);
   }
